<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.FragmentLogin">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/buttonRegister2"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#004D8A"
        android:drawableTint="@color/white"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        android:text="Sign in with Google"
        android:textColor="#000000"
        android:textColorHighlight="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        tools:cornerRadius="12" />

    <Button
        android:id="@+id/buttonRegisterGoogle"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#FFE500"
        android:drawableTint="@color/white"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        android:text="Register"
        android:textColor="#000000"
        android:textColorHighlight="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        tools:cornerRadius="12" />

    <Button
        android:id="@+id/buttonRegisterGoogle2"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        android:text="Login"
        android:textColor="#000000"
        android:textColorHighlight="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister2"
        app:rippleColor="@color/white"
        tools:cornerRadius="12" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:layout_margin="10dp"
        android:buttonTint="@color/black"
        android:text="Remember Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="Login"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="314dp"
        android:layout_height="44dp"
        android:layout_marginBottom="116dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EmailValidation"
        android:layout_width="167dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>