...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06D6A0"
    android:id="@+id/ConfirmRegis">

    <Button
        android:id="@+id/buttonRegister3"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:backgroundTint="#FFE500"
...
